Prevent horizontal scrollbar on overlay

--- a/overlay.css
+++ b/overlay.css
@@ -3,6 +3,10 @@
   src: url('chrome-extension://__MSG_@@extension_id__/fonts/SpaceMono-Regular.woff2') format('woff2');
 }
 
+#overlay-container {
+  overflow-x: hidden;
+}
+
 #overlay-controls {
   position: fixed;
   top: 20px;
